added category names

--- a/index.html
+++ b/index.html
@@ -3,19 +3,62 @@
 <head>
 	<title>Jess Sung</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
 <body>
 	<header class="site-header">
 		<h1 class="title">Jess Sung</h1>
 		<nav>
-			<p><a href="">category</a></p>
-			<p><a href="">category</a></p>
-			<p><a href="">category</a></p>
-			<p><a href="">category</a></p>
-			<p><a href="">category</a></p>
+			<div class="dropdown">
+				<p>Lifestyle</p>
+					<div class="dropdown-content">
+				        <a href="#">Link 1</a>
+				        <a href="#">Link 2</a>
+				        <a href="#">Link 3</a>
+	       			</div>
+	       	</div>
+	       <div class="dropdown">
+				<p>Conceptual</p>
+					<div class="dropdown-content">
+				        <a href="#">Marriage</a>
+				        <a href="#">Grandma</a>
+				        <a href="#">I quit smoking</a>
+				        <a href="#">China</a>
+	       			</div>
+	       	</div>
+	       	<div class="dropdown">
+				<p>Skate/Snow</p>
+					<div class="dropdown-content">
+				        <a href="#">WOF (Wheels of Fortune)</a>
+				        <a href="#">EXPOSURE</a>
+				        <a href="#">Hastings bowl</a>
+				        <a href="#">Go skate day</a>
+				        <a href="#">Bonsor</a>
+	       			</div>
+	       	</div>
+	       	<div class="dropdown">
+				<p>Weddings</p>
+					<div class="dropdown-content">
+				        <a href="#">Alvin & Johanna</a>
+				        <a href="#">Jenn & Matt</a>
+				        <a href="#">Taylor & Craig</a>
+				        <a href="#">Greg & Jocelyn</a>
+	       			</div>
+	       	</div>
+	       	<div class="dropdown">
+				<p>Music</p>
+					<div class="dropdown-content">
+				        <a href="#">Jasper Sloan Yip</a>
+				        <a href="#">Ponytails</a>
+				        <a href="#">Skepta</a>
+				        <a href="#">SZA</a>
+				        <a href="#">The Internet</a>
+				        <a href="#">More</a>
+	       			</div>
+	       	</div>
 		</nav>
     </header>
+
 	<div class="photos">
 		<div class="photo">
 			<img src="i1.jpg">
