--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
 	       			</div>
 	       	</div>
 		</nav>
+		<div class="socials">
+			<hr>
+			<p><i>All content copyright the artist. No commercial use without express written permission.</i>			
+			<br>
+			<br>
+			© JESS SUNG</p>
+			<p><a href="https://www.caleshapera.com">Site Credit</a></p>
     </header>
 
 	<div class="photos">
