added mobile functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,47 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
 <body>
+	
+<!-- mobile nav -->
+
+<header class="phone-header">
+	<nav class="furled">
+		<h1 class="topleft">Jess Sung</h1>
+		<div class="topright"> 
+			<button onclick="showTop()"><img class="icon" src="Hamburger_icon.svg"></button>
+		</div>
+	</nav>
+</header>
+<header class="phone-header2">
+		<ul class="mobilenav">
+			<div class="topright">
+				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+			</div>
+			<button onclick="lifestyle()"><li>Lifestyle</li></button>
+			<button><li>Conceptual</li></button>
+			<button><li>Skate/Snow</li></button>
+			<button><li>Weddings</li></button>
+			<button><li>Music</li></button>
+		</ul>
+</header>
+<header class="lifestyle">
+		<ul class="mobilenav">
+			<div class="topright">
+				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+			</div>
+			<button onclick="lifestyle()"><li>My buds</li></button>
+			<button><li>hot babes</li></button>
+			<button><li>whatever</li></button>
+			<button><li>random life things</li></button>
+			<button><li>cool animals</li></button>
+		</ul>
+</header>
+
+
+
+
+
+<!-- desktop nav -->
 	<header class="site-header">
 		<h1 class="title">Jess Sung</h1>
 		<nav>
@@ -50,6 +91,7 @@
 					<div class="dropdown-content">
 				        <a href="#">Jasper Sloan Yip</a>
 				        <a href="#">Ponytails</a>
+				        <a href="#">Fly Ball</a>
 				        <a href="#">Skepta</a>
 				        <a href="#">SZA</a>
 				        <a href="#">The Internet</a>
@@ -86,5 +128,6 @@
 			<img src="i6.jpg">
 		</div>
 	</div>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
