more mobile stuff

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
 			</div>
 			<button onclick="lifestyle()"><li>Lifestyle</li></button>
-			<button><li>Conceptual</li></button>
-			<button><li>Skate/Snow</li></button>
-			<button><li>Weddings</li></button>
-			<button><li>Music</li></button>
+			<button onclick="conceptual()"><li>Conceptual</li></button>
+			<button onclick="skate()"><li>Skate/Snow</li></button>
+			<button onclick="weddings()"><li>Weddings</li></button>
+			<button onclick="music()"><li>Music</li></button>
 		</ul>
 </header>
 <header class="lifestyle">
@@ -34,14 +34,61 @@
 			<div class="topright">
 				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
 			</div>
-			<button onclick="lifestyle()"><li>My buds</li></button>
+			<button><li>My buds</li></button>
 			<button><li>hot babes</li></button>
 			<button><li>whatever</li></button>
 			<button><li>random life things</li></button>
 			<button><li>cool animals</li></button>
 		</ul>
 </header>
-
+<header class="conceptual">
+		<ul class="mobilenav">
+			<div class="topright">
+				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+			</div>
+			<button><li>My buds</li></button>
+			<button><li>marriage</li></button>
+			<button><li>grandma</li></button>
+			<button><li>i quit smoking</li></button>
+			<button><li>china</li></button>
+		</ul>
+</header>
+<header class="skate">
+		<ul class="mobilenav">
+			<div class="topright">
+				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+			</div>
+			<button><li>My buds</li></button>
+			<button><li>hot babes</li></button>
+			<button><li>whatever</li></button>
+			<button><li>random life things</li></button>
+			<button><li>cool animals</li></button>
+		</ul>
+</header>
+<header class="weddings">
+		<ul class="mobilenav">
+			<div class="topright">
+				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+			</div>
+			<button><li>My buds</li></button>
+			<button><li>hot babes</li></button>
+			<button><li>whatever</li></button>
+			<button><li>random life things</li></button>
+			<button><li>cool animals</li></button>
+		</ul>
+</header>
+<header class="music">
+		<ul class="mobilenav">
+			<div class="topright">
+				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+			</div>
+			<button><li>My buds</li></button>
+			<button><li>hot babes</li></button>
+			<button><li>whatever</li></button>
+			<button><li>random life things</li></button>
+			<button><li>cool animals</li></button>
+		</ul>
+</header>
 
 
 
