more mobile bullshit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header class="phone-header2">
 		<ul class="mobilenav">
 			<div class="topright">
-				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
 			</div>
 			<button onclick="lifestyle()"><li>Lifestyle</li></button>
 			<button onclick="conceptual()"><li>Conceptual</li></button>
@@ -32,7 +32,7 @@
 <header class="lifestyle">
 		<ul class="mobilenav">
 			<div class="topright">
-				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
 			</div>
 			<button><li>My buds</li></button>
 			<button><li>hot babes</li></button>
@@ -44,7 +44,7 @@
 <header class="conceptual">
 		<ul class="mobilenav">
 			<div class="topright">
-				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
 			</div>
 			<button><li>My buds</li></button>
 			<button><li>marriage</li></button>
@@ -56,7 +56,7 @@
 <header class="skate">
 		<ul class="mobilenav">
 			<div class="topright">
-				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
 			</div>
 			<button><li>My buds</li></button>
 			<button><li>hot babes</li></button>
@@ -68,7 +68,7 @@
 <header class="weddings">
 		<ul class="mobilenav">
 			<div class="topright">
-				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
 			</div>
 			<button><li>My buds</li></button>
 			<button><li>hot babes</li></button>
@@ -80,7 +80,7 @@
 <header class="music">
 		<ul class="mobilenav">
 			<div class="topright">
-				<button onclick="menuClose()"><img class=icon" src="Hamburger_icon.svg"></button>
+				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
 			</div>
 			<button><li>My buds</li></button>
 			<button><li>hot babes</li></button>
