fullscreen nav menuuu

--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
 </header>
 <header class="phone-header2">
 		<ul class="mobilenav">
-			<div class="topright">
-				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
-			</div>
 			<button onclick="lifestyle()"><li>Lifestyle</li></button>
 			<button onclick="conceptual()"><li>Conceptual</li></button>
 			<button onclick="skate()"><li>Skate/Snow</li></button>
@@ -31,9 +28,7 @@
 </header>
 <header class="lifestyle">
 		<ul class="mobilenav">
-			<div class="topright">
-				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
-			</div>
+			
 			<button><li>My buds</li></button>
 			<button><li>hot babes</li></button>
 			<button><li>whatever</li></button>
@@ -43,9 +38,7 @@
 </header>
 <header class="conceptual">
 		<ul class="mobilenav">
-			<div class="topright">
-				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
-			</div>
+			
 			<button><li>My buds</li></button>
 			<button><li>marriage</li></button>
 			<button><li>grandma</li></button>
@@ -55,9 +48,7 @@
 </header>
 <header class="skate">
 		<ul class="mobilenav">
-			<div class="topright">
-				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
-			</div>
+			
 			<button><li>My buds</li></button>
 			<button><li>hot babes</li></button>
 			<button><li>whatever</li></button>
@@ -67,9 +58,7 @@
 </header>
 <header class="weddings">
 		<ul class="mobilenav">
-			<div class="topright">
-				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
-			</div>
+			
 			<button><li>My buds</li></button>
 			<button><li>hot babes</li></button>
 			<button><li>whatever</li></button>
@@ -79,9 +68,7 @@
 </header>
 <header class="music">
 		<ul class="mobilenav">
-			<div class="topright">
-				<button onclick="menuClose()"><img class="icon" src="Hamburger_icon.svg"></button>
-			</div>
+			
 			<button><li>My buds</li></button>
 			<button><li>hot babes</li></button>
 			<button><li>whatever</li></button>
@@ -169,7 +156,7 @@
 			<img src="i4.jpg">
 		</div>
 		<div class="photo">
-			<img src="i5.jpg">
+			<img src="i5.JPG">
 		</div>
 		<div class="photo">
 			<img src="i6.jpg">
