added close icon for menu

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 			<button onclick="skate()"><li>Skate/Snow</li></button>
 			<button onclick="weddings()"><li>Weddings</li></button>
 			<button onclick="music()"><li>Music</li></button>
+			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
 		</ul>
+
 </header>
 <header class="lifestyle">
 		<ul class="mobilenav">
@@ -34,6 +36,7 @@
 			<button><li>whatever</li></button>
 			<button><li>random life things</li></button>
 			<button><li>cool animals</li></button>
+			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
 		</ul>
 </header>
 <header class="conceptual">
@@ -44,6 +47,7 @@
 			<button><li>grandma</li></button>
 			<button><li>i quit smoking</li></button>
 			<button><li>china</li></button>
+			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
 		</ul>
 </header>
 <header class="skate">
@@ -54,6 +58,7 @@
 			<button><li>whatever</li></button>
 			<button><li>random life things</li></button>
 			<button><li>cool animals</li></button>
+			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
 		</ul>
 </header>
 <header class="weddings">
@@ -64,6 +69,7 @@
 			<button><li>whatever</li></button>
 			<button><li>random life things</li></button>
 			<button><li>cool animals</li></button>
+			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
 		</ul>
 </header>
 <header class="music">
@@ -74,6 +80,7 @@
 			<button><li>whatever</li></button>
 			<button><li>random life things</li></button>
 			<button><li>cool animals</li></button>
+			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
 		</ul>
 </header>
 
@@ -133,13 +140,7 @@
 	       			</div>
 	       	</div>
 		</nav>
-		<div class="socials">
-			<hr>
-			<p><i>All content copyright the artist. No commercial use without express written permission.</i>			
-			<br>
-			<br>
-			© JESS SUNG</p>
-			<p><a href="https://www.caleshapera.com">Site Credit</a></p>
+			
     </header>
 
 	<div class="photos">
