mobile nav finished basically

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<button onclick="skate()"><li>Skate/Snow</li></button>
 			<button onclick="weddings()"><li>Weddings</li></button>
 			<button onclick="music()"><li>Music</li></button>
-			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
+			<button onclick="menuClose()"><img class="closeicon" src="close_icon.svg"></button>
 		</ul>
 
 </header>
@@ -36,7 +36,7 @@
 			<button><li>whatever</li></button>
 			<button><li>random life things</li></button>
 			<button><li>cool animals</li></button>
-			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
+			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 <header class="conceptual">
@@ -47,40 +47,41 @@
 			<button><li>grandma</li></button>
 			<button><li>i quit smoking</li></button>
 			<button><li>china</li></button>
-			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
+			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 <header class="skate">
 		<ul class="mobilenav">
 			
-			<button><li>My buds</li></button>
-			<button><li>hot babes</li></button>
-			<button><li>whatever</li></button>
-			<button><li>random life things</li></button>
-			<button><li>cool animals</li></button>
-			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
+			<button><li>WOF</li></button>
+			<button><li>exposure</li></button>
+			<button><li>hastings bowl</li></button>
+			<button><li>go skate day</li></button>
+			<button><li>bonsor</li></button>
+			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 <header class="weddings">
 		<ul class="mobilenav">
 			
-			<button><li>My buds</li></button>
-			<button><li>hot babes</li></button>
-			<button><li>whatever</li></button>
-			<button><li>random life things</li></button>
-			<button><li>cool animals</li></button>
-			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
+			<button><li>Alvin & Johanna</li></button>
+			<button><li>Jenn & Matt</li></button>
+			<button><li>Greg & Jocelyn</li></button>
+			<button><li>Taylor & Craig</li></button>
+			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 <header class="music">
 		<ul class="mobilenav">
 			
-			<button><li>My buds</li></button>
-			<button><li>hot babes</li></button>
-			<button><li>whatever</li></button>
-			<button><li>random life things</li></button>
-			<button><li>cool animals</li></button>
-			<button onclick="menuClose()"><img class="closeicon" src="close_icon.png"></button>
+			<button><li>Jasper Sloan Yip</li></button>
+			<button><li>Fly Ball</li></button>
+			<button><li>Ponytails</li></button>
+			<button><li>Skepta</li></button>
+			<button><li>SZA</li></button>
+			<button><li>The Internet</li></button>
+			<button><li>More...</li></button>
+			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 
@@ -94,9 +95,9 @@
 			<div class="dropdown">
 				<p>Lifestyle</p>
 					<div class="dropdown-content">
-				        <a href="#">Link 1</a>
-				        <a href="#">Link 2</a>
-				        <a href="#">Link 3</a>
+				        <a href="#">cool stuff</a>
+				        <a href="#">even cooler lifez</a>
+				        <a href="#">my dope frnds</a>
 	       			</div>
 	       	</div>
 	       <div class="dropdown">
