--- a/i-quit-smoking.html
+++ b/i-quit-smoking.html
@@ -12,7 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>Jess Sung</title>
+	<title>I Quit Smoking - Jess Sung</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
@@ -112,11 +112,11 @@
 	       			</div>
 	       	</div>
 	       <div class="dropdown">
-				<p>Conceptual</p>
+				<span class="active"><p>Conceptual</p></span>
 					<div class="dropdown-content">
 				        <a href="#">Marriage</a>
 				        <a href="#">Grandma</a>
-				        <a href="i-quit-smoking.html">i quit smoking</a>
+				        <a href="#">I quit smoking</a>
 				        <a href="#">China</a>
 	       			</div>
 	       	</div>
@@ -157,22 +157,46 @@
 
 	<div class="photos">
 		<div class="photo">
-			<img src="i1.jpg">
+			<img src="./i-quit-smoking/image00001.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i2.png">
+			<img src="./i-quit-smoking/image00002.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i3.jpg">
+			<img src="./i-quit-smoking/image00003.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i4.jpg">
+			<img src="./i-quit-smoking/image00004.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i5.JPG">
+			<img src="./i-quit-smoking/image00005.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i6.jpg">
+			<img src="./i-quit-smoking/image00006.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./i-quit-smoking/image00007.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./i-quit-smoking/image00008.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./i-quit-smoking/image00009.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./i-quit-smoking/image00010.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./i-quit-smoking/image00011.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./i-quit-smoking/image00012.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./i-quit-smoking/image00013.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./i-quit-smoking/image00014.jpeg">
 		</div>
 	</div>
 <script type="text/javascript" src="script.js"></script>
