--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <header class="phone-header">
 	<nav class="furled">
-		<h1 class="topleft">Jess Sung</h1>
+		<h1 class="topleft"><a class="blackout" href="index.html">Jess Sung</a></h1>
 		<div class="topright"> 
 			<button onclick="showTop()"><img class="icon" src="Hamburger_icon.svg"></button>
 		</div>
@@ -56,7 +56,7 @@
 			<button><li>My buds</li></button>
 			<button><li>marriage</li></button>
 			<button><li>grandma</li></button>
-			<button><li>i quit smoking</li></button>
+			<button><li><a href="i-quit-smoking.html">i quit smoking</a></li></button>
 			<button><li>china</li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
@@ -101,7 +101,7 @@
 
 <!-- desktop nav -->
 	<header class="site-header">
-		<h1 class="title">Jess Sung</h1>
+		<h1 class="topleft"><a class="blackout" href="index.html">Jess Sung</a></h1>
 		<nav>
 			<div class="dropdown">
 				<p>Lifestyle</p>
