--- a/i-quit-smoking.html
+++ b/i-quit-smoking.html
@@ -12,7 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>I Quit Smoking - Jess Sung</title>
+	<title>Jess Sung</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
@@ -30,6 +30,9 @@
 </header>
 <header class="phone-header2">
 		<ul class="mobilenav">
+			<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en">
+				<img class="mob-icon" src="insta-icon.png">		
+			</a>
 			<button onclick="lifestyle()"><li>Lifestyle</li></button>
 			<button onclick="conceptual()"><li>Conceptual</li></button>
 			<button onclick="skate()"><li>Skate/Snow</li></button>
@@ -112,7 +115,7 @@
 	       			</div>
 	       	</div>
 	       <div class="dropdown">
-				<span class="active"><p>Conceptual</p></span>
+				<p>Conceptual</p>
 					<div class="dropdown-content">
 				        <a href="#">Marriage</a>
 				        <a href="#">Grandma</a>
@@ -151,10 +154,13 @@
 				        <a href="#">More</a>
 	       			</div>
 	       	</div>
+	       	<div class="dropdown">
+	       		<a style="font-size: 18px" href="contact.html">Contact</a>
+	       	</div>
+	       	<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en"><img class="insta-icon" src="insta-icon.png"></a>
 		</nav>
 			
     </header>
-
 	<div class="photos">
 		<div class="photo">
 			<img src="./i-quit-smoking/image00001.jpeg">
