--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 </header>
 <header class="phone-header2">
 		<ul class="mobilenav">
+			<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en">
+				<img class="mob-icon" src="insta-icon.png">		
+			</a>
 			<button onclick="lifestyle()"><li>Lifestyle</li></button>
 			<button onclick="conceptual()"><li>Conceptual</li></button>
 			<button onclick="skate()"><li>Skate/Snow</li></button>
@@ -151,6 +154,10 @@
 				        <a href="#">More</a>
 	       			</div>
 	       	</div>
+	       	<div class="dropdown">
+	       		<a style="font-size: 18px" href="contact.html">Contact</a>
+	       	</div>
+	       	<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en"><img class="insta-icon" src="insta-icon.png"></a>
 		</nav>
 			
     </header>
