--- a/north-america.html
+++ b/north-america.html
@@ -12,8 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>Jess Sung Photography</title>
-	
+	<title>North America - Jess Sung</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
@@ -151,22 +150,70 @@
 
 	<div class="photos">
 		<div class="photo">
-			<img src="i1.jpg">
+			<img src="./travelbc/image00001.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i2.png">
+			<img src="./travelbc/image00002.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i3.jpg">
+			<img src="./travelbc/image00003.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i4.jpg">
+			<img src="./travelbc/image00004.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i5.JPG">
+			<img src="./travelbc/image00005.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i6.jpg">
+			<img src="./travelbc/image00006.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00007.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00008.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00009.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00010.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00011.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00012.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00013.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00014.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00015.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00016.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00017.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00018.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00019.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00020.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00021.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./travelbc/image00022.jpeg">
 		</div>
 	</div>
 	<div class="low-icon">
