--- a/nurture-nature.html
+++ b/nurture-nature.html
@@ -12,8 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>Jess Sung Photography</title>
-	
+	<title>Nurture Nature - Jess Sung</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
@@ -110,10 +109,10 @@
 				<p>Conceptual</p>
 					<div class="dropdown-content">
 				        <a href="i-quit-smoking.html">I Quit Smoking</a>
-				        <a href="i-quit-smoking.html">Fine China</a>
+				        <a href="fine-china.html">Fine China</a>
 				        <a href="grandma.html">Grandma</a>
 				        <a href="nurture-nature.html">Nurture Nature</a>
-				        <a href="i-quit-smoking.html">Affection</a>
+				        <a href="affection.htl">Affection</a>
 				        <a href="#">8</a>
 	       			</div>
 	       	</div>
@@ -151,22 +150,67 @@
 
 	<div class="photos">
 		<div class="photo">
-			<img src="i1.jpg">
+			<img src="./nurture-nature/image00001.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i2.png">
+			<img src="./nurture-nature/image00002.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i3.jpg">
+			<img src="./nurture-nature/image00003.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i4.jpg">
+			<img src="./nurture-nature/image00004.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i5.JPG">
+			<img src="./nurture-nature/image00005.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i6.jpg">
+			<img src="./nurture-nature/image00006.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00007.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00008.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00009.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00010.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00011.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00012.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00013.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00014.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00015.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00016.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00017.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00018.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00019.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00020.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./nurture-nature/image00021.jpeg">
 		</div>
 	</div>
 	<div class="low-icon">
