--- a/skate.html
+++ b/skate.html
@@ -12,8 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>Jess Sung Photography</title>
-	
+	<title>Skate - Jess Sung</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
@@ -144,29 +143,73 @@
 	       	<div class="dropdown">
 	       		<a style="font-size: 18px" href="contact.html">Contact</a>
 	       	</div>
-	       	
+	       
 		</nav>
 			
     </header>
-
 	<div class="photos">
 		<div class="photo">
-			<img src="i1.jpg">
+			<img src="./skate/image00001.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i2.png">
+			<img src="./skate/image00002.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i3.jpg">
+			<img src="./skate/image00003.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i4.jpg">
+			<img src="./skate/image00004.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i5.JPG">
+			<img src="./skate/image00005.jpeg">
 		</div>
 		<div class="photo">
-			<img src="i6.jpg">
+			<img src="./skate/image00006.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./skate/image00007.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./skate/image00008.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./skate/image00009.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./WOF/image00011.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./WOF/image00002.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./WOF/image00003.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./WOF/image00004.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./WOF/image00005.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./WOF/image00006.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./WOF/image00007.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./hastings-bowl/image00001.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./hastings-bowl/image00002.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./plaza/image00001.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./plaza/image00002.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./plaza/image00003.jpeg">
 		</div>
 	</div>
 	<div class="low-icon">
