--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>Jess Sung Photography</title>
-	
+	<title>Contact - Jess Sung</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
@@ -110,10 +109,10 @@
 				<p>Conceptual</p>
 					<div class="dropdown-content">
 				        <a href="i-quit-smoking.html">I Quit Smoking</a>
-				        <a href="i-quit-smoking.html">Fine China</a>
+				        <a href="fine-china.html">Fine China</a>
 				        <a href="grandma.html">Grandma</a>
 				        <a href="nurture-nature.html">Nurture Nature</a>
-				        <a href="i-quit-smoking.html">Affection</a>
+				        <a href="affection.htl">Affection</a>
 				        <a href="#">8</a>
 	       			</div>
 	       	</div>
@@ -148,29 +147,16 @@
 		</nav>
 			
     </header>
-
-	<div class="photos">
-		<div class="photo">
-			<img src="i1.jpg">
+	<div class="contact">
+		<div class="contact-text">
+			
+			<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en">Instagram</a>
+			<p>jesssung @ gmail.com</p>
+			<p>Jess Sung is a photographer working in Vancouver, Canada.</p>
 		</div>
-		<div class="photo">
-			<img src="i2.png">
-		</div>
-		<div class="photo">
-			<img src="i3.jpg">
-		</div>
-		<div class="photo">
-			<img src="i4.jpg">
-		</div>
-		<div class="photo">
-			<img src="i5.JPG">
-		</div>
-		<div class="photo">
-			<img src="i6.jpg">
-		</div>
-	</div>
-	<div class="low-icon">
-		<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en"><img class="insta-icon" src="insta-icon.png"></a>
+		<div class="contact-pic">
+			<img class="foto" src="contactpic.jpg">
+		</div>	
 	</div>
 <script type="text/javascript" src="script.js"></script>
 </body>
