--- a/i-quit-smoking.html
+++ b/i-quit-smoking.html
@@ -12,7 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>Jess Sung</title>
+	<title>I Quit Smoking - Jess Sung</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
@@ -35,7 +35,7 @@
 			</a>
 			<button onclick="lifestyle()"><li>Lifestyle</li></button>
 			<button onclick="conceptual()"><li>Conceptual</li></button>
-			<button onclick="skate()"><li>Skate/Snow</li></button>
+			<button onclick="skate()"><li>Sport</li></button>
 			<button onclick="weddings()"><li>Weddings</li></button>
 			<button onclick="music()"><li>Music</li></button>
 			<button onclick="menuClose()"><img class="closeicon" src="close_icon.svg"></button>
@@ -44,57 +44,46 @@
 </header>
 <header class="lifestyle">
 		<ul class="mobilenav">
-			
-			<button><li>My buds</li></button>
-			<button><li>hot babes</li></button>
-			<button><li>whatever</li></button>
-			<button><li>random life things</li></button>
-			<button><li>cool animals</li></button>
+			<button><li><a href="portraits.html">Portraits</a></li></button>
+			<button><li><a href="asia.html">Asia</a></li></button>
+			<button><li><a href="europe.html">Europe</a></li></button>
+			<button><li><a href="africa.html">Africa</a></li></button>
+			<button><li><a href="north-america.html">North America</a></li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 <header class="conceptual">
 		<ul class="mobilenav">
-			
-			<button><li>My buds</li></button>
-			<button><li>marriage</li></button>
-			<button><li>grandma</li></button>
-			<button><li><a href="i-quit-smoking.html">i quit smoking</a></li></button>
-			<button><li>china</li></button>
+			<button><li><a href="i-quit-smoking.html">I Quit Smoking</a></li></button>
+			<button><li><a href="fine-china.html">Fine China</a></li></button>
+			<button><li><a href="grandma.html">Grandma</a></li></button>
+			<button><li><a href="nurture-nature.html">Nurture Nature</a></a></li></button>
+			<button><li><a href="affection.html">Affection</a></li></button>
+			<button><li><a href="8.html">8</a></li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 <header class="skate">
 		<ul class="mobilenav">
-			
-			<button><li>WOF</li></button>
-			<button><li>exposure</li></button>
-			<button><li>hastings bowl</li></button>
-			<button><li>go skate day</li></button>
-			<button><li>bonsor</li></button>
+			<button><li><a href="skate.html">Skate</a></li></button>
+			<button><li><a href="snow.html">Snow</a></li></button>
+			<button><li><a href="surf.html">Surf</a></li></button>
+			<button><li><a href="tennis.html">Tennis</a></li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 <header class="weddings">
 		<ul class="mobilenav">
-			
-			<button><li>Alvin & Johanna</li></button>
-			<button><li>Jenn & Matt</li></button>
-			<button><li>Greg & Jocelyn</li></button>
-			<button><li>Taylor & Craig</li></button>
+			<button><li><a href="greg-and-jocelyn.html">Greg & Jocelyn</a></li></button>
+			<button><li><a href="alvin-and-johanna.html">Alvin & Johanna</a></li></button>
+			<button><li><a href="bachelor-bachelorette.html">Bachelor/ette</a></li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 <header class="music">
 		<ul class="mobilenav">
-			
-			<button><li>Jasper Sloan Yip</li></button>
-			<button><li>Fly Ball</li></button>
-			<button><li>Ponytails</li></button>
-			<button><li>Skepta</li></button>
-			<button><li>SZA</li></button>
-			<button><li>The Internet</li></button>
-			<button><li>More...</li></button>
+			<button><li><a href="nurture-nature.html">Live</a></li></button>
+			<button><li><a href="nurture-nature.html">Staged</a></li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
@@ -109,55 +98,52 @@
 			<div class="dropdown">
 				<p>Lifestyle</p>
 					<div class="dropdown-content">
-				        <a href="#">cool stuff</a>
-				        <a href="#">even cooler lifez</a>
-				        <a href="#">my dope frnds</a>
+				        <a href="portraits.html">Portraits</a>
+				        <a href="asia.html">Asia</a>
+				        <a href="europe.html">Europe</a>
+				        <a href="africa.html">Africa</a>
+				        <a href="north-america.html">North America</a>
 	       			</div>
 	       	</div>
 	       <div class="dropdown">
 				<p>Conceptual</p>
 					<div class="dropdown-content">
-				        <a href="#">Marriage</a>
-				        <a href="#">Grandma</a>
-				        <a href="i-quit-smoking.html">i quit smoking</a>
-				        <a href="#">China</a>
+				        <a href="i-quit-smoking.html">I Quit Smoking</a>
+				        <a href="i-quit-smoking.html">Fine China</a>
+				        <a href="grandma.html">Grandma</a>
+				        <a href="nurture-nature.html">Nurture Nature</a>
+				        <a href="i-quit-smoking.html">Affection</a>
+				        <a href="#">8</a>
 	       			</div>
 	       	</div>
 	       	<div class="dropdown">
-				<p>Skate/Snow</p>
+				<p>Sport</p>
 					<div class="dropdown-content">
-				        <a href="#">WOF (Wheels of Fortune)</a>
-				        <a href="#">EXPOSURE</a>
-				        <a href="#">Hastings bowl</a>
-				        <a href="#">Go skate day</a>
-				        <a href="#">Bonsor</a>
+				        <a href="skate.html">Skate</a>
+				        <a href="snow.html">Snow</a>
+				        <a href="surf.html">Surf</a>
+				        <a href="tennis.html">Tennis</a>
 	       			</div>
 	       	</div>
 	       	<div class="dropdown">
 				<p>Weddings</p>
-					<div class="dropdown-content">
-				        <a href="#">Alvin & Johanna</a>
-				        <a href="#">Jenn & Matt</a>
-				        <a href="#">Taylor & Craig</a>
-				        <a href="#">Greg & Jocelyn</a>
+					<div class="dropdown-content">    
+				        <a href="greg-and-jocelyn.html">Greg & Jocelyn</a>
+				        <a href="alvin-and-johanna.html">Alvin & Johanna</a>
+						<a href="bachelor-bachelorette.html">Bachelor/ette</a>
 	       			</div>
 	       	</div>
 	       	<div class="dropdown">
 				<p>Music</p>
 					<div class="dropdown-content">
-				        <a href="#">Jasper Sloan Yip</a>
-				        <a href="#">Ponytails</a>
-				        <a href="#">Fly Ball</a>
-				        <a href="#">Skepta</a>
-				        <a href="#">SZA</a>
-				        <a href="#">The Internet</a>
-				        <a href="#">More</a>
+				        <a href="live.html">Live</a>
+				        <a href="staged.html">Staged</a>
 	       			</div>
 	       	</div>
 	       	<div class="dropdown">
 	       		<a style="font-size: 18px" href="contact.html">Contact</a>
 	       	</div>
-	       	<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en"><img class="insta-icon" src="insta-icon.png"></a>
+	       	
 		</nav>
 			
     </header>
@@ -204,6 +190,9 @@
 		<div class="photo">
 			<img src="./i-quit-smoking/image00014.jpeg">
 		</div>
+	</div>
+	<div class="low-icon">
+		<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en"><img class="insta-icon" src="insta-icon.png"></a>
 	</div>
 <script type="text/javascript" src="script.js"></script>
 </body>
