--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</script>
 
 	<title>Jess Sung Photography</title>
-	
+
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
@@ -151,23 +151,48 @@
 
 	<div class="photos">
 		<div class="photo">
-			<img src="i1.jpg">
+			<img src="./frontpage/0017_15A1.jpg">
 		</div>
 		<div class="photo">
-			<img src="i2.png">
+			<img src="./frontpage/2017-09-01-0012.jpg">
 		</div>
 		<div class="photo">
-			<img src="i3.jpg">
+			<img src="./frontpage/2017-09-07-0024.jpg">
 		</div>
 		<div class="photo">
-			<img src="i4.jpg">
+			<img src="./frontpage/2017-09-14-0050.jpg">
 		</div>
 		<div class="photo">
-			<img src="i5.JPG">
+			<img src="./frontpage/2018-05-19-0035.jpg">
 		</div>
 		<div class="photo">
-			<img src="i6.jpg">
+			<img src="./frontpage/2018-06-06-0047.jpg">
 		</div>
+		<div class="photo">
+			<img src="./frontpage/2017-09-09-0016.jpg">
+		</div>
+		<div class="photo">
+			<img src="./frontpage/2018-06-06-0055-2.jpg">
+		</div>
+		<div class="photo">
+			<img src="./frontpage/2018-07-06-0019.jpg">
+		</div>
+		<div class="photo">
+			<img src="./frontpage/2018-08-21-0015-3.jpg">
+		</div>
+		<div class="photo">
+			<img src="./frontpage/2018-08-21-0032.jpg">
+		</div>
+		<div class="photo">
+			<img src="./frontpage/2018-08-22-0033.jpg">
+		</div>
+		<div class="photo">
+			<img src="./frontpage/Scan-140611-0019.jpg">
+		</div>
+		<div class="photo">
+			<img src="./frontpage/Scan-140830-0032.jpg">
+		</div>
+		
 	</div>
 	<div class="low-icon">
 		<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en"><img class="insta-icon" src="insta-icon.png"></a>
