--- a/nurture-nature.html
+++ b/nurture-nature.html
@@ -38,6 +38,7 @@
 			<button onclick="skate()"><li>Sport</li></button>
 			<button onclick="weddings()"><li>Weddings</li></button>
 			<button onclick="music()"><li>Music</li></button>
+			<li><a href="contact.html">Contact</a></li>
 			<button onclick="menuClose()"><img class="closeicon" src="close_icon.svg"></button>
 		</ul>
 
