--- a/greg-and-jocelyn.html
+++ b/greg-and-jocelyn.html
@@ -12,7 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>Contact - Jess Sung</title>
+	<title>Greg and Jocelyn - Jess Sung</title>
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
@@ -151,16 +151,47 @@
 		</nav>
 			
     </header>
-	<div class="contact">
-		<div class="contact-text">
-			
-			<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en">Instagram</a>
-			<p>jesssung @ gmail.com</p>
-			<p>Jess Sung is a photographer working in Vancouver, Canada.</p>
+	<div class="photos">
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-07-21-0011.jpg">
 		</div>
-		<div class="contact-pic">
-			<img class="foto" src="contactpic.jpg">
-		</div>	
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-08-10-0006.jpg">
+		</div>
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-08-10-0038.jpg">
+		</div>
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-08-29-0009.jpg">
+		</div>
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-08-29-0021.jpg">
+		</div>
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-08-29-0027.jpg">
+		</div>
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-08-29-0033.jpg">
+		</div>
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-08-29-0035.jpg">
+		</div>
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-08-29-0036.jpg">
+		</div>
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-08-29-0037.jpg">
+		</div>
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-08-30-0002.jpg">
+		</div>
+		<div class="photo">
+			<img src="./jocelyn-and-greg/2017-08-30-0046.jpg">
+		</div>
+		
+	</div>
+	<div class="low-icon">
+		<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en"><img class="insta-icon" src="insta-icon.png"></a>
 	</div>
 <script type="text/javascript" src="script.js"></script>
 </body>
