--- a/skate.html
+++ b/skate.html
@@ -13,6 +13,7 @@
 	</script>
 
 	<title>Skate - Jess Sung</title>
+
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
@@ -78,13 +79,14 @@
 			<button><li><a href="greg-and-jocelyn.html">Greg & Jocelyn</a></li></button>
 			<button><li><a href="alvin-and-johanna.html">Alvin & Johanna</a></li></button>
 			<button><li><a href="bachelor-bachelorette.html">Bachelor/ette</a></li></button>
+			<button><li><a href="engagement.html">Engagement</a></li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 <header class="music">
 		<ul class="mobilenav">
-			<button><li><a href="nurture-nature.html">Live</a></li></button>
-			<button><li><a href="nurture-nature.html">Staged</a></li></button>
+			<button><li><a href="live.html">Live</a></li></button>
+			<button><li><a href="staged.html">Staged</a></li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
@@ -132,6 +134,7 @@
 				        <a href="greg-and-jocelyn.html">Greg & Jocelyn</a>
 				        <a href="alvin-and-johanna.html">Alvin & Johanna</a>
 						<a href="bachelor-bachelorette.html">Bachelor/ette</a>
+						<a href="engagement.html">Engagement</a>
 	       			</div>
 	       	</div>
 	       	<div class="dropdown">
@@ -144,7 +147,7 @@
 	       	<div class="dropdown">
 	       		<a style="font-size: 18px" href="contact.html">Contact</a>
 	       	</div>
-	       
+	       	
 		</nav>
 			
     </header>
@@ -177,7 +180,7 @@
 			<img src="./skate/image00009.jpeg">
 		</div>
 		<div class="photo">
-			<img src="./WOF/image00011.jpeg">
+			<img src="./WOF/image000011.jpeg">
 		</div>
 		<div class="photo">
 			<img src="./WOF/image00002.jpeg">
