--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
 			<button><li><a href="greg-and-jocelyn.html">Greg & Jocelyn</a></li></button>
 			<button><li><a href="alvin-and-johanna.html">Alvin & Johanna</a></li></button>
 			<button><li><a href="bachelor-bachelorette.html">Bachelor/ette</a></li></button>
+			<button><li><a href="engagement.html">Engagement</a></li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 <header class="music">
 		<ul class="mobilenav">
-			<button><li><a href="nurture-nature.html">Live</a></li></button>
-			<button><li><a href="nurture-nature.html">Staged</a></li></button>
+			<button><li><a href="live.html">Live</a></li></button>
+			<button><li><a href="staged.html">Staged</a></li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
@@ -133,6 +134,7 @@
 				        <a href="greg-and-jocelyn.html">Greg & Jocelyn</a>
 				        <a href="alvin-and-johanna.html">Alvin & Johanna</a>
 						<a href="bachelor-bachelorette.html">Bachelor/ette</a>
+						<a href="engagement.html">Engagement</a>
 	       			</div>
 	       	</div>
 	       	<div class="dropdown">
