--- a/nurture-nature.html
+++ b/nurture-nature.html
@@ -12,7 +12,8 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>Nurture Nature - Jess Sung</title>
+	<title>Nature Nurture - Jess Sung</title>
+
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
 </head>
@@ -78,13 +79,14 @@
 			<button><li><a href="greg-and-jocelyn.html">Greg & Jocelyn</a></li></button>
 			<button><li><a href="alvin-and-johanna.html">Alvin & Johanna</a></li></button>
 			<button><li><a href="bachelor-bachelorette.html">Bachelor/ette</a></li></button>
+			<button><li><a href="engagement.html">Engagement</a></li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
 <header class="music">
 		<ul class="mobilenav">
-			<button><li><a href="nurture-nature.html">Live</a></li></button>
-			<button><li><a href="nurture-nature.html">Staged</a></li></button>
+			<button><li><a href="live.html">Live</a></li></button>
+			<button><li><a href="staged.html">Staged</a></li></button>
 			<button onclick="menuBack()"><img class="closeicon" src="back_icon.png"></button>
 		</ul>
 </header>
@@ -110,10 +112,10 @@
 				<p>Conceptual</p>
 					<div class="dropdown-content">
 				        <a href="i-quit-smoking.html">I Quit Smoking</a>
-				        <a href="fine-china.html">Fine China</a>
+				        <a href="i-quit-smoking.html">Fine China</a>
 				        <a href="grandma.html">Grandma</a>
 				        <a href="nurture-nature.html">Nurture Nature</a>
-				        <a href="affection.htl">Affection</a>
+				        <a href="i-quit-smoking.html">Affection</a>
 				        <a href="#">8</a>
 	       			</div>
 	       	</div>
@@ -132,6 +134,7 @@
 				        <a href="greg-and-jocelyn.html">Greg & Jocelyn</a>
 				        <a href="alvin-and-johanna.html">Alvin & Johanna</a>
 						<a href="bachelor-bachelorette.html">Bachelor/ette</a>
+						<a href="engagement.html">Engagement</a>
 	       			</div>
 	       	</div>
 	       	<div class="dropdown">
