--- a/asia.html
+++ b/asia.html
@@ -12,7 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>North America - Jess Sung</title>
+	<title>Asia - Jess Sung</title>
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
@@ -154,94 +154,34 @@
 
 	<div class="photos">
 		<div class="photo">
-			<img src="./travelbc/image00001.jpeg">
+			<img src="./asia-korea/2018-06-06-0060.jpg">
 		</div>
 		<div class="photo">
-			<img src="./travelbc/image00002.jpeg">
+			<img src="./asia-korea/2018-06-07-0009.jpg">
 		</div>
 		<div class="photo">
-			<img src="./travelbc/image00003.jpeg">
+			<img src="./asia-korea/2018-06-07-0018.jpg">
 		</div>
 		<div class="photo">
-			<img src="./travelbc/image00004.jpeg">
+			<img src="./asia-korea/2018-06-07-0019.jpg">
 		</div>
 		<div class="photo">
-			<img src="./travelbc/image00005.jpeg">
+			<img src="./asia-korea/2018-06-07-0023.jpg">
 		</div>
 		<div class="photo">
-			<img src="./travelbc/image00006.jpeg">
+			<img src="./asia-korea/2018-06-07-0028.jpg">
 		</div>
 		<div class="photo">
-			<img src="./travelbc/image00007.jpeg">
+			<img src="./asia-korea/2018-06-07-0030.jpg">
 		</div>
 		<div class="photo">
-			<img src="./travelbc/image00008.jpeg">
+			<img src="./asia-korea/2018-06-07-0040.jpg">
 		</div>
 		<div class="photo">
-			<img src="./travelbc/image00009.jpeg">
+			<img src="./asia-korea/2018-06-07-0041.jpg">
 		</div>
 		<div class="photo">
-			<img src="./travelbc/image00010.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00011.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00012.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00013.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00014.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00015.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00016.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00017.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00018.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00019.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00020.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00021.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./travelbc/image00022.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./north-america-extras/Scan-140620-0007.jpg">
-		</div>
-		<div class="photo">
-			<img src="./north-america-extras/Scan-140620-0011.jpg">
-		</div>
-		<div class="photo">
-			<img src="./north-america-extras/Scan-140830-0023.jpg">
-		</div>
-		<div class="photo">
-			<img src="./north-america-extras/Scan-140830-0028.jpg">
-		</div>
-		<div class="photo">
-			<img src="./north-america-extras/Scan-140830-0029.jpg">
-		</div>
-		<div class="photo">
-			<img src="./north-america-extras/Scan-140830-0034.jpg">
-		</div>
-		<div class="photo">
-			<img src="./north-america-extras/Scan-140916-0036.jpg">
-		</div>
-		<div class="photo">
-			<img src="./north-america-extras/Scan-140916-0038.jpg">
+			<img src="./asia-korea/2018-06-07-0042.jpg">
 		</div>
 	</div>
 	<div class="low-icon">
