more menu fuckery

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>Contact - Jess Sung</title>
+	<title>Contact - Jess Sung Photography</title>
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
@@ -112,11 +112,11 @@
 				<p>Conceptual</p>
 					<div class="dropdown-content">
 				        <a href="i-quit-smoking.html">I Quit Smoking</a>
-				        <a href="i-quit-smoking.html">Fine China</a>
+				        <a href="fine-china.html">Fine China</a>
 				        <a href="grandma.html">Grandma</a>
 				        <a href="nurture-nature.html">Nurture Nature</a>
-				        <a href="i-quit-smoking.html">Affection</a>
-				        <a href="#">8</a>
+				        <a href="affection.html">Affection</a>
+				        <a href="8.html">8</a>
 	       			</div>
 	       	</div>
 	       	<div class="dropdown">
