--- a/404.html
+++ b/404.html
@@ -116,11 +116,11 @@ permalink: /404.html
 				<p>Conceptual</p>
 					<div class="dropdown-content">
 				        <a href="i-quit-smoking.html">I Quit Smoking</a>
-				        <a href="i-quit-smoking.html">Fine China</a>
+				        <a href="fine-china.html">Fine China</a>
 				        <a href="grandma.html">Grandma</a>
 				        <a href="nurture-nature.html">Nurture Nature</a>
-				        <a href="i-quit-smoking.html">Affection</a>
-				        <a href="#">8</a>
+				        <a href="affection.html">Affection</a>
+				        <a href="8.html">8</a>
 	       			</div>
 	       	</div>
 	       	<div class="dropdown">
